--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "browserify": "^13.1.1",
     "browserify-shim": "^3.8.12",
     "ecstatic": "^2.1.0",
+    "routes": "^2.1.0",
     "xml2js": "^0.4.17"
   },
   "browserify": {
