--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
   "author": "ybbarng <ybbarng@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "browserify": "^13.1.1",
-    "browserify-shim": "^3.8.12",
     "ecstatic": "^2.1.0",
     "express": "^4.14.0",
     "multer": "^1.2.0",
@@ -24,13 +22,14 @@
     "d3": "global:d3"
   },
   "devDependencies": {
+    "@babel/core": "^7.5.5",
     "babel-preset-es2015": "^6.18.0",
-    "browserify": "^13.1.1",
+    "browserify": "^16.5.0",
     "browserify-shim": "^3.8.12",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-uglify": "^2.0.0",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-uglify": "^3.0.2",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^2.0.0"
   }
 }
